--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,9 +3,10 @@
   font-family: 'Cormorant'/*, 'Arial', 'sans-serif'*/;
   flex-direction: column;
   margin: auto;
-  background-color: #fff;
+  background-color: #FFF4E4;
   min-width: 303px;
   max-width: 1440px;
+  min-height: 100vh;
 }
 
 .page::-webkit-scrollbar {
