--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -19,8 +19,8 @@
 }
 
 .profile__user {
-display: flex;
-margin-right: 20px;
+  display: flex;
+  margin-right: 20px;
 }
 
 .profile__exit {
@@ -40,7 +40,9 @@ margin-right: 20px;
   line-height: 29px;
   font-style: italic;
   cursor: pointer;
-  font-family: 'Cormorant'/*, 'Arial', 'sans-serif'*/;
+  font-family: 'Cormorant'
+    /*, 'Arial', 'sans-serif'*/
+  ;
 }
 
 .profile__name {
@@ -80,3 +82,93 @@ margin-right: 20px;
 a:hover, button:hover {
   text-decoration: underline;
 }
+
+@media screen and (max-width: 1024px) {
+
+  .profile__block {
+    margin: 10px 40px;
+    font-size: 18px;
+    line-height: 22px;
+    font-weight: 400;
+  }
+
+  .profile__name {
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 42px;
+  }
+
+  .profile__object {
+    padding: 0 20px;
+    height: 60px;
+    font-size: 24px;
+    line-height: 29px;
+    font-weight: 400;
+  }
+}
+
+  @media screen and (max-width: 850px) {
+
+    .profile__button {
+      height: 50px;
+      padding: 0 10px;
+      font-size: 18px;
+      line-height: 22px;
+    }
+
+    .profile__name {
+      font-size: 36px;
+      line-height: 43px;
+    }
+
+    .profile__object {
+      padding: 0 10px;
+      height: 50px;
+      font-size: 24px;
+      line-height: 29px;
+    }
+  }
+
+  @media screen and (max-width: 850px) {
+    
+    .profile__block {
+      flex-direction: column;
+      font-size: 18px;
+      line-height: 22px;
+      font-weight: 400;
+    }
+    
+    .profile__user {
+      margin-right: 0;
+    }
+    
+    .profile__exit {
+      justify-content: end;
+    }
+    
+    .profile__button {
+      justify-content: center;
+      height: 50px;
+      padding: 0;
+      font-size: 18px;
+      line-height: 22px;
+    }
+    
+    .profile__block h1, .profile__block button {
+      justify-items: start;
+    }
+
+    .profile__name {
+      font-size: 24px;
+      line-height: 29px;
+      margin-right: auto;
+      margin-bottom: 20px;
+    }
+
+    .profile__object {
+      margin: 20px auto;
+      font-size: 18px;
+      line-height: 22px;
+      font-weight: 400;
+    }
+  }
