--- a/src/components/CardDesc/CardDesc.css
+++ b/src/components/CardDesc/CardDesc.css
@@ -54,3 +54,82 @@
   margin-top: 20px;
   margin-bottom: 30px;
 }
+
+@media screen and (min-width: 1441px) {
+  .desc {
+    max-width: 1340px;
+  }
+}
+
+@media screen and (max-width: 1440px) {
+
+  .desc__photo_m {
+    width: 330px;
+    height: 425px;
+  }
+  
+  .desc__photo_s {
+    height: 165px;
+    width: 120px;
+    margin-right: 15px;
+    margin-top: 30px;
+  }
+  
+  .desc__text {
+    font-weight: 400;
+    margin-top: 15px;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .desc {
+    max-width: 89%;
+  }
+  
+  .desc__block {
+    flex-direction: column;
+  }
+
+  .desc__photo {
+    align-items: center;
+  }
+  
+  .desc__photo_s {
+    margin-right: 50px;
+    margin-top: 45px;
+  } 
+  
+  .desc__photo_s:last-of-type {
+    margin-right: 0;
+  }
+  
+  .desc__list {
+    margin-left: 0;
+  }
+  
+  .desc__text {
+    margin:auto;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .desc {
+    max-width: 87%;
+  }
+  
+  .desc__photo_m {
+    width: 260px;
+    height: 335px;
+  }
+  
+  .desc__photo_mini {
+    display: none;
+  }
+  
+  .desc__text {
+    font-size: 18px;
+    line-height: 21px;
+    margin-top: 20px;
+    margin-bottom: 15px;
+  }
+}
