--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -11,9 +11,10 @@
     padding: 0;
     font-weight: normal;
     font-size: 14px;
-    line-height: 17px;
+    line-height: 19px;
+    font-style: italic;
     text-align: center;
-    color: #A0A0A0;
+    color: #990012;
     padding-right: 6px;
   }
   
@@ -26,6 +27,10 @@
     text-align: center;
     color: #3456F3;
     text-decoration: none;
+  }
+
+  .form__link:hover {
+    text-decoration: underline;
   }
   
   @media screen and (max-width:502px) { 
