добавлена валидация и исправлена форма карточки

--- a/src/blocks/object/object.css
+++ b/src/blocks/object/object.css
@@ -6,6 +6,7 @@
     margin: 50px 60px;
     border: 5px solid #4B0082;
     background: #E8C9FF;
+    position: relative;
 }
 
 @media screen and (max-width: 1240px) {
