--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -19,14 +19,64 @@
   margin: auto;
 }
 
-/*.page::-webkit-scrollbar-track {
-  box-shadow: 5px 5px 5px -5px rgba(34, 60, 80, 0.2) inset;
-  background-color: #  background-color: #fff;
-  ;
-  border-radius: 10px;
+.popup {
+  visibility: hidden;
+  display: flex;
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.5);
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: visibility 0.5s, opacity 0.5s;
 }
 
-.page::-webkit-scrollbar-thumb {
+.popup_opened {
+  visibility: visible;
+  display: flex;
+  opacity: 1;
+}
+
+.popup__container {
+  background-color: #ffffff;
   border-radius: 10px;
-  background: linear-gradient(180deg, #FFE5B4, #82CAFF);
-}*/
+  display: flex;
+  flex-direction: column;
+  z-index: 1;
+  position: relative;
+}
+
+.popup__close { 
+  background-image: url(../../images/close-icon.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  border: 0;
+  background-color: rgba(1, 1, 1, 0);
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  transition: opacity 0.3s;
+}
+
+.popup__close:hover {
+  opacity: 0.6;
+  cursor: pointer;
+}
+
+.form__item-error {
+  color: red;
+  margin-bottom: 24px;
+  font-size: 12px;
+}
+
+.element__link {
+  transition: opacity 0.3s;
+}
+
+.element__link:hover {
+  cursor: pointer;
+  opacity: 0.3;
+}
