--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,17 +1,15 @@
 .page {
   display: flex;
-  font-family: 'Cormorant'
-    /*, 'Arial', 'sans-serif'*/
-  ;
+  font-family: "Cormorant";
   flex-direction: column;
   margin: auto;
   background-color: #FFF4E4;
   min-width: 303px;
-  /*max-width: 1440px;*/
+  /*max-width: 1440px*/
   min-height: 100vh;
 }
 
-.page::-webkit-scrollbar {
+.body::-webkit-scrollbar {
   width: 10px;
 }
 
@@ -19,14 +17,15 @@
   margin: auto;
 }
 
-/*.page::-webkit-scrollbar-track {
+.body::-webkit-scrollbar-track {
   box-shadow: 5px 5px 5px -5px rgba(34, 60, 80, 0.2) inset;
-  background-color: #  background-color: #fff;
-  ;
+  background-color: #fff;
   border-radius: 10px;
 }
 
-.page::-webkit-scrollbar-thumb {
+.body::-webkit-scrollbar-thumb {
   border-radius: 10px;
   background: linear-gradient(180deg, #FFE5B4, #82CAFF);
-}*/
+}
+
+/*# sourceMappingURL=App.css.map */
