--- a/src/components/CardDesc/CardDesc.css
+++ b/src/components/CardDesc/CardDesc.css
@@ -1,30 +1,61 @@
-.desc {
+.desc__list, .desc__photo, .desc {
   display: flex;
   flex-direction: column;
+}
+
+.desc__photo_mini, .desc__block {
+  display: flex;
+  flex-direction: row;
+}
+
+.desc {
   max-width: 93%;
   width: 100%;
   margin: auto;
 }
-
-.desc__block {
-  display: flex;
-  flex-direction: row;
-
+@media screen and (min-width: 1441px) {
+  .desc {
+    max-width: 1340px;
+  }
+}
+@media screen and (max-width: 850px) {
+  .desc {
+    max-width: 89%;
+  }
+}
+@media screen and (max-width: 550px) {
+  .desc {
+    max-width: 87%;
+  }
 }
 
-.desc__photo {
-  display: flex;
-  flex-direction: column;
+@media screen and (max-width: 850px) {
+  .desc__photo {
+    align-items: center;
+  }
 }
 
 .desc__photo_m {
   width: 400px;
   height: 500px;
 }
+@media screen and (max-width: 1440px) {
+  .desc__photo_m {
+    width: 330px;
+    height: 425px;
+  }
+}
+@media screen and (max-width: 550px) {
+  .desc__photo_m {
+    width: 260px;
+    height: 335px;
+  }
+}
 
-.desc__photo_mini {
-  display: flex;
-  flex-direction: row;
+@media screen and (max-width: 550px) {
+  .desc__photo_mini {
+    display: none;
+  }
 }
 
 .desc__photo_s {
@@ -32,16 +63,38 @@
   width: 160px;
   margin-right: 30px;
   margin-top: 30px;
-} 
+}
+@media screen and (max-width: 1440px) {
+  .desc__photo_s {
+    height: 165px;
+    width: 120px;
+    margin-right: 15px;
+    margin-top: 30px;
+  }
+}
+@media screen and (max-width: 850px) {
+  .desc__photo_s {
+    margin-right: 50px;
+    margin-top: 45px;
+  }
+}
 
 .desc__photo_s:last-of-type {
   margin-right: 15px;
 }
+@media (max-width: 850px) {
+  .desc__photo_s:last-of-type {
+    margin-right: 0;
+  }
+}
 
 .desc__list {
-  display: flex;
-  flex-direction: column;
   margin-left: 20px;
+}
+@media (max-width: 850px) {
+  .desc__list {
+    margin-left: 0;
+  }
 }
 
 .desc__text {
@@ -54,78 +107,18 @@
   margin-top: 20px;
   margin-bottom: 30px;
 }
-
-@media screen and (min-width: 1441px) {
-  .desc {
-    max-width: 1340px;
-  }
-}
-
 @media screen and (max-width: 1440px) {
-
-  .desc__photo_m {
-    width: 330px;
-    height: 425px;
-  }
-  
-  .desc__photo_s {
-    height: 165px;
-    width: 120px;
-    margin-right: 15px;
-    margin-top: 30px;
-  }
-  
   .desc__text {
     font-weight: 400;
     margin-top: 15px;
   }
 }
-
 @media screen and (max-width: 850px) {
-  .desc {
-    max-width: 89%;
-  }
-  
-  .desc__block {
-    flex-direction: column;
-  }
-
-  .desc__photo {
-    align-items: center;
-  }
-  
-  .desc__photo_s {
-    margin-right: 50px;
-    margin-top: 45px;
-  } 
-  
-  .desc__photo_s:last-of-type {
-    margin-right: 0;
-  }
-  
-  .desc__list {
-    margin-left: 0;
-  }
-  
   .desc__text {
-    margin:auto;
+    margin: auto;
   }
 }
-
-@media screen and (max-width: 550px) {
-  .desc {
-    max-width: 87%;
-  }
-  
-  .desc__photo_m {
-    width: 260px;
-    height: 335px;
-  }
-  
-  .desc__photo_mini {
-    display: none;
-  }
-  
+@media (max-width: 550px) {
   .desc__text {
     font-size: 18px;
     line-height: 21px;
@@ -133,3 +126,5 @@
     margin-bottom: 15px;
   }
 }
+
+/*# sourceMappingURL=CardDesc.css.map */
