--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,88 +1,124 @@
 .footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background-color: #000;
-    color: #ECE2CF;
-    /*max-width: 1440px;*/
-    width: 100%;
-    flex-shrink: 0;
-    margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: #000;
+  color: #ECE2CF;
+  /*max-width: 1440px*/
+  width: 100%;
+  flex-shrink: 0;
+  margin: 0 auto;
 }
 
 .footer div {
-    display: flex;
-    max-width: 1150px;
-    margin: auto;
-    width: 100%;
-    justify-content: space-between;
+  display: flex;
+  max-width: 1150px;
+  margin: auto;
+  width: 100%;
+  justify-content: space-between;
+}
+@media screen and (max-width: 580px) {
+  .footer div {
+    flex-direction: column;
+  }
 }
 
 .footer__logo {
-    display: flex;
-    font-style: italic;
-    font-weight: 400;
-    font-size: 72px;
-    line-height: 87px;
-    margin-block-start: 0;
-    margin-block-end: 0;
-    margin-top: 45px;
+  display: flex;
+  font-style: italic;
+  font-weight: 400;
+  font-size: 72px;
+  line-height: 87px;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-top: 45px;
+}
+@media screen and (max-width: 1024px) {
+  .footer__logo {
+    font: 64px/78px;
+  }
+}
+@media screen and (max-width: 580px) {
+  .footer__logo {
+    font: 36px/44px;
+    margin-top: 27px;
+  }
 }
 
 .footer__block {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+}
+@media screen and (max-width: 1024px) {
+  .footer__block {
+    margin-left: 75px;
+  }
+}
+@media screen and (max-width: 820px) {
+  .footer__block {
+    margin-left: 43px;
+  }
+}
+@media screen and (max-width: 580px) {
+  .footer__block {
+    margin: auto;
+  }
 }
 
 .footer__author {
-    font-style: normal;
-    font-weight: normal;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 29px;
+  display: flex;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin: 25px 0 15px;
+}
+@media screen and (max-width: 580px) {
+  .footer__author {
+    display: none;
+  }
+}
+
+.contacts {
+  font-family: Cormorant;
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  padding-inline-start: 0;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 44px;
+  margin-top: 15px;
+  white-space: nowrap;
+}
+@media screen and (max-width: 1024px) {
+  .contacts {
     font-size: 24px;
     line-height: 29px;
-    display: flex;
-    margin-block-start: 0;
-    margin-block-end: 0;
-    margin: 25px 0 15px;
+    margin: 15px 180px 0 0;
+  }
 }
-
-@media screen and (max-width: 1024px) {
-    .footer__logo {
-        font-size: 64px;
-        line-height: 78px;
-    }
-
-    .footer__block {
-        margin-left: 75px;
-    }
-}
-
 @media screen and (max-width: 820px) {
-    .footer__logo {
-        font-size: 64px;
-        line-height: 78px;
-    }
-
-    .footer__block {
-        margin-left: 43px;
-    }
+  .contacts {
+    margin: 15px 100px 0 0;
+  }
 }
-
 @media screen and (max-width: 580px) {
-    .footer div {
-        flex-direction: column;
-    }
-
-    .footer__logo {
-        font-size: 36px;
-        line-height: 44px;
-        margin-top: 27px;
-    }
-
-    .footer__block {
-        margin: auto;
-    }
-
-    .footer__author {
-        display: none;
-    }
+  .contacts {
+    margin: auto;
+    align-items: center;
+  }
 }
+
+.contact {
+  display: flex;
+  font-family: Cormorant;
+  margin: 0;
+}
+
+/*# sourceMappingURL=Footer.css.map */
