--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,127 +1,126 @@
 .header {
-    display: flex;
-    margin: 0 auto;
-    width: 95%;
-    height: 120px;
-    z-index: 1;
-    justify-content:space-between;
-    position: relative;
-    max-width: 1440px;
+  display: flex;
+  margin: 0 auto;
+  width: 95%;
+  height: 120px;
+  z-index: 1;
+  justify-content: space-between;
+  position: relative;
+  max-width: 1440px;
 }
 
 .header__img {
-   position: relative; 
+  position: relative;
 }
 
 .header__logo {
-
-    width: 250px;
-    position: absolute;
-    top: 0;
-    left: 10px;
+  width: 250px;
+  position: absolute;
+  top: 0;
+  left: 10px;
 }
 
-.header__nav_mob{
-    display: grid;
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: repeat(5, 1fr);
-    min-height: 200px;
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
+.header__nav_mob {
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(5, 1fr);
+  min-height: 200px;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
 }
 
 .header__nav_block {
-    text-decoration: none;
-    color: #fff;
-    font-size: 36px;
-    line-height: 48px;
-    text-align: center;
+  text-decoration: none;
+  color: #fff;
+  font-size: 36px;
+  line-height: 48px;
+  text-align: center;
 }
 
 .header__logo_search {
-    min-height: 230px;
-    align-items: center;
-    margin: 0 0 0 50px;
+  min-height: 230px;
+  align-items: center;
+  margin: 0 0 0 50px;
 }
 
 .header_active {
-    text-decoration: underline;
-}
-.header_search {
-    height: 230px;
-    background: url('../../images/logo.webp') no-repeat;
-    background-size: contain;
-    background-color: #E3E4FA;
+  text-decoration: underline;
 }
 
-.header__nav{
-    display: flex;
-    background-color: #4B0082;
-    /*max-width: 1340px;*/
+.header_search {
+  height: 230px;
+  background: url("../../images/logo.webp") no-repeat;
+  background-size: contain;
+  background-color: #E3E4FA;
+}
+
+.header__nav {
+  display: flex;
+  background-color: #4B0082;
+  /*max-width: 1340px*/
 }
 
 .header__top {
-    display: flex;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  display: flex;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 @media screen and (max-width: 820px) {
-    .header {
-        overflow: hidden;
-        background-size: cover;
-        height: 110px;
-        background: none;
-    }
-    .header__img {
-        display: flex;
-        z-index: 1;
-        width: 100%;
-    }
+  .header {
+    overflow: hidden;
+    background-size: cover;
+    height: 110px;
+    background: none;
+  }
 
-    .header_search {
-        align-items: center;
-        background-position: center;
-    }
-    .header__top {
-        border-bottom: none;
-        max-height: 500px;
-        height: 100%;
-        align-items: center;
-        justify-content: center;
-        position: relative;
-    }
+  .header__img {
+    display: flex;
+    z-index: 1;
+    width: 100%;
+  }
 
-    .header__nav_mob {
-        align-self: flex-end;
-        display: flex;
-        flex-direction: column;
-        height: 40px;
-        width: 55px;
-        margin-right: 20px;
-        margin-left: auto;
-        background: url(../../images/menu.svg) no-repeat;
-        background-position-y: center;
-        min-height: 100px;
-    }
-    .header__nav_block {
-        display: none;
-    }
+  .header_search {
+    align-items: center;
+    background-position: center;
+  }
+
+  .header__top {
+    border-bottom: none;
+    max-height: 500px;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+  }
+
+  .header__nav_mob {
+    align-self: flex-end;
+    display: flex;
+    flex-direction: column;
+    height: 40px;
+    width: 55px;
+    margin-right: 20px;
+    margin-left: auto;
+    background: url(../../images/menu.svg) no-repeat;
+    background-position-y: center;
+    min-height: 100px;
+  }
+
+  .header__nav_block {
+    display: none;
+  }
 }
-
 @media screen and (max-width: 1240px) {
-    .header__logo_search {
-        font-size: 72px;
-        line-height: 87px;
-    }
-    .header__nav_block {
-        font-size: 24px;
-        line-height: 36px;
-    }
+  .header__logo_search {
+    font-size: 72px;
+    line-height: 87px;
+  }
+
+  .header__nav_block {
+    font-size: 24px;
+    line-height: 36px;
+  }
 }
 
-
-
-
-
-
+/*# sourceMappingURL=Header.css.map */
