--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,46 +1,47 @@
-.form__signup {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .form__text {
-    margin: 0;
-    padding: 0;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 19px;
-    font-style: italic;
-    text-align: center;
-    color: #990012;
-    padding-right: 6px;
-  }
-  
-  .form__link {
-    margin: 0;
-    padding: 0;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 17px;
-    text-align: center;
-    color: #3456F3;
-    text-decoration: none;
-  }
+.form__link, .form__text, .form__signup {
+  margin: 0;
+  padding: 0;
+}
 
-  .form__link:hover {
-    text-decoration: underline;
+.form__signup {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.form__text {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 19px;
+  font-style: italic;
+  text-align: center;
+  color: #990012;
+  padding-right: 6px;
+}
+@media screen and (max-width: 502px) {
+  .form__text {
+    font-size: 12px;
+    line-height: 15px;
   }
-  
-  @media screen and (max-width:502px) { 
-    .form__text {
-      font-size: 12px;
-      line-height: 15px;
-    }
-  
-    .form__link {
-      font-size: 12px;
-      line-height: 15px;
-    }
+}
+
+.form__link {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  text-align: center;
+  color: #3456F3;
+  text-decoration: none;
+}
+@media screen and (max-width: 502px) {
+  .form__link {
+    font-size: 12px;
+    line-height: 15px;
   }
+}
+
+.form__link:hover {
+  text-decoration: underline;
+}
+
+/*# sourceMappingURL=Register.css.map */
