--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -9,6 +9,51 @@
   min-height: 100vh;
 }
 
+.popup {
+  visibility: hidden;
+  display: flex;
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.5);
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: visibility 0.5s, opacity 0.5s;
+}
+
+.popup_opened {
+  visibility: visible;
+  display: flex;
+  opacity: 1;
+}
+
+.popup__container {
+  width: 430px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  z-index: 1;
+  position: relative;
+}
+
+.popup__close {
+  background-image: url(../../images/close-icon.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  border: 0;
+  background-color: rgba(1, 1, 1, 0);
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: -40px;
+  right: -30px;
+  transition: opacity 0.3s;
+}
+
 .body::-webkit-scrollbar {
   width: 10px;
 }
@@ -26,6 +71,21 @@
 .body::-webkit-scrollbar-thumb {
   border-radius: 10px;
   background: linear-gradient(180deg, #FFE5B4, #82CAFF);
+}
+
+.form__item-error {
+  color: red;
+  margin-bottom: 24px;
+  font-size: 12px;
+}
+
+.element__link {
+  transition: opacity 0.3s;
+}
+
+.element__link:hover {
+  cursor: pointer;
+  opacity: 0.3;
 }
 
 /*# sourceMappingURL=App.css.map */
