--- a/src/components/Cards/Cards.sass
+++ b/src/components/Cards/Cards.sass
@@ -26,6 +26,7 @@
   margin: 50px 60px
   border: 5px solid #4B0082
   background: #E8C9FF
+  position: relative
   @media screen
     @media (max-width: 1240px)
       /*max-width: 1134px*/
@@ -48,6 +49,7 @@
         font: 18px/22px
 .object_mob
   @extend %flexRow
+  position: relative
   @media screen
     @media (max-width: 850px)
       flex-direction: column
@@ -123,3 +125,8 @@
       height: 100%
     @media (max-width: 820px)
         font: 18px/22px
+.cards__basket 
+  position: absolute
+  width: 20px
+  top: 0
+  right: 0
