--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,9 +8,24 @@
   position: relative;
   max-width: 1440px;
 }
+@media screen and (max-width: 820px) {
+  .header {
+    overflow: hidden;
+    background-size: cover;
+    height: 110px;
+    background: none;
+  }
+}
 
 .header__img {
   position: relative;
+}
+@media screen and (max-width: 820px) {
+  .header__img {
+    display: flex;
+    z-index: 1;
+    width: 100%;
+  }
 }
 
 .header__logo {
@@ -29,71 +44,7 @@
   align-items: center;
   width: 100%;
 }
-
-.header__nav_block {
-  text-decoration: none;
-  color: #fff;
-  font-size: 36px;
-  line-height: 48px;
-  text-align: center;
-}
-
-.header__logo_search {
-  min-height: 230px;
-  align-items: center;
-  margin: 0 0 0 50px;
-}
-
-.header_active {
-  text-decoration: underline;
-}
-
-.header_search {
-  height: 230px;
-  background: url("../../images/logo.webp") no-repeat;
-  background-size: contain;
-  background-color: #E3E4FA;
-}
-
-.header__nav {
-  display: flex;
-  background-color: #4B0082;
-  /*max-width: 1340px*/
-}
-
-.header__top {
-  display: flex;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-}
-
 @media screen and (max-width: 820px) {
-  .header {
-    overflow: hidden;
-    background-size: cover;
-    height: 110px;
-    background: none;
-  }
-
-  .header__img {
-    display: flex;
-    z-index: 1;
-    width: 100%;
-  }
-
-  .header_search {
-    align-items: center;
-    background-position: center;
-  }
-
-  .header__top {
-    border-bottom: none;
-    max-height: 500px;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-  }
-
   .header__nav_mob {
     align-self: flex-end;
     display: flex;
@@ -106,20 +57,74 @@
     background-position-y: center;
     min-height: 100px;
   }
+}
 
+.header__nav_block {
+  text-decoration: none;
+  color: #fff;
+  font-size: 36px;
+  line-height: 48px;
+  text-align: center;
+}
+@media screen and (max-width: 1240px) {
+  .header__nav_block {
+    font-size: 24px;
+    line-height: 36px;
+  }
+}
+@media screen and (max-width: 820px) {
   .header__nav_block {
     display: none;
   }
+}
+
+.header__logo_search {
+  min-height: 230px;
+  align-items: center;
+  margin: 0 0 0 50px;
 }
 @media screen and (max-width: 1240px) {
   .header__logo_search {
     font-size: 72px;
     line-height: 87px;
   }
+}
 
-  .header__nav_block {
-    font-size: 24px;
-    line-height: 36px;
+.header_active {
+  text-decoration: underline;
+}
+
+.header_search {
+  height: 230px;
+  background: url("../../images/logo.webp") no-repeat;
+  background-size: contain;
+  background-color: #E3E4FA;
+}
+@media screen and (max-width: 820px) {
+  .header_search {
+    align-items: center;
+    background-position: center;
+  }
+}
+
+.header__nav {
+  display: flex;
+  background-color: #4B0082;
+  /*max-width: 1340px*/
+}
+
+.header__top {
+  display: flex;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+@media screen and (max-width: 820px) {
+  .header__top {
+    border-bottom: none;
+    max-height: 500px;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    position: relative;
   }
 }
 
