--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -1,10 +1,9 @@
-<<<<<<< HEAD
 .object_mob, .object__name, .object {
   display: flex;
   flex-direction: row;
 }
 
-.object__text-block, .object__about {
+.object__text-block {
   display: flex;
   flex-direction: column;
 }
@@ -28,11 +27,11 @@
 }
 
 .object {
-  max-width: 1200px;
-  min-height: 475px;
+  max-width: 91, 7%;
+  height: 475px;
   margin: 50px 60px;
-  border: 5px solid #4B0082;
-  background: #E8C9FF;
+  box-shadow: 0px 10px 20px 5px rgba(191, 191, 191, 0.8);
+  background: #FEE0D4;
   position: relative;
 }
 @media screen and (max-width: 1240px) {
@@ -41,27 +40,30 @@
     margin: 50px 55px;
   }
 }
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 950px) {
   .object {
+    flex-direction: column;
+    height: 100%;
     /*max-width: 687px*/
     margin: 50px;
+    display: flex;
+    align-self: center;
+    width: 80vw;
   }
 }
 @media screen and (max-width: 650px) {
   .object {
     flex-direction: column;
-    /*max-width: 260px*/
+    max-width: 260px;
     margin: 30px;
   }
 }
 
 .object__name {
-  align-items: center;
   max-width: 250px;
 }
 @media screen and (max-width: 1024px) {
   .object__name {
-    margin: 10px auto;
     font: 18px/22px;
   }
 }
@@ -84,15 +86,25 @@
 }
 
 .object__about {
+  display: grid;
+  column-gap: 100px;
+  row-gap: 10px;
   margin: 54px 0;
+  align-items: center;
+  justify-items: flex-start;
+  max-height: 365px;
+  width: 100%;
 }
 @media screen and (max-width: 1240px) {
   .object__about {
+    column-gap: 50px;
     margin: 40px 0;
   }
 }
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 950px) {
   .object__about {
+    display: flex;
+    flex-direction: column;
     margin: 10px 0 30px;
   }
 }
@@ -102,9 +114,6 @@
   }
 }
 
-.object__block {
-  align-self: baseline;
-}
 @media screen and (max-width: 1024px) {
   .object__block {
     font: 18px/22px;
@@ -115,7 +124,7 @@
   width: 270px;
   height: 360px;
   background-size: cover;
-  border: 3px solid #9d9d9d;
+  border: 1px solid #9d9d9d;
   margin: auto 50px;
 }
 @media screen and (max-width: 1240px) {
@@ -125,8 +134,10 @@
     margin: auto 24px;
   }
 }
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 950px) {
   .object__photo {
+    display: flex;
+    align-self: center;
     margin: auto 22px;
   }
 }
@@ -150,12 +161,11 @@
 }
 
 .object__text-block {
-  height: 360px;
   margin: auto 50px;
+  grid-area: 5/1/6/5;
 }
 @media screen and (max-width: 1240px) {
   .object__text-block {
-    height: 550px;
     margin: auto 24px;
   }
 }
@@ -168,7 +178,6 @@
 
 .object__text {
   max-width: 620px;
-  height: 320px;
   overflow: hidden;
 }
 @media screen and (max-width: 1240px) {
@@ -182,22 +191,39 @@
   }
 }
 
-=======
->>>>>>> 71596b788c4571e2f6889aa6017a515c3397d868
 .cards__basket {
   position: absolute;
   width: 20px;
   top: 0;
-<<<<<<< HEAD
   right: 0;
 }
 
-/*# sourceMappingURL=Cards.css.map */
-=======
-    right: 0;
+.object__cost {
+  grid-area: 1/1/2/2;
 }
 
-.object_mob {
-    position: relative;
+.object_a {
+  grid-area: 1/2/2/3;
 }
->>>>>>> 71596b788c4571e2f6889aa6017a515c3397d868
+
+.object_b {
+  grid-area: 1/3/2/4;
+}
+
+.object_area {
+  grid-area: 1/4/2/5;
+}
+
+.object__address {
+  grid-area: 2/1/3/2;
+}
+
+.object_c {
+  grid-area: 3/1/4/2;
+}
+
+.object_d {
+  grid-area: 4/1/5/2;
+}
+
+/*# sourceMappingURL=Cards.css.map */
