--- a/src/components/Cards/Cards.sass
+++ b/src/components/Cards/Cards.sass
@@ -21,31 +21,35 @@
     block-end: 0
 .object
   @extend %flexRow
-  max-width: 1200px
-  min-height: 475px
+  max-width: 91,7%
+  height: 475px
   margin: 50px 60px
-  border: 5px solid #4B0082
-  background: #E8C9FF
+  box-shadow: 0px 10px 20px 5px rgba(191, 191, 191, 0.8)
+  background: #FEE0D4
   position: relative
   @media screen
     @media (max-width: 1240px)
       /*max-width: 1134px*/
       margin: 50px 55px
-    @media (max-width: 820px)
+    @media (max-width: 950px)
+      flex-direction: column
+      height: 100%
       /*max-width: 687px*/
       margin: 50px
+      display: flex
+      align-self: center
+      width: 80vw
     @media (max-width: 650px)
       flex-direction: column
-      /*max-width: 260px*/
+      max-width: 260px
       margin: 30px
 .object__name
   @extend %flexRow
-  align-items: center
   max-width: 250px
   @extend %fontS
   @media screen
     @media (max-width: 1024px)
-        margin: 10px auto
+        //margin: 10px auto
         font: 18px/22px
 .object_mob
   @extend %flexRow
@@ -59,18 +63,29 @@
       max-width: 260px
       align-items: center
 .object__about
-  @extend %flexCol
+  display: grid
+  //grid-template-columns: 4
+  //grid-template-rows: 4
+  column-gap: 100px
+  row-gap: 10px
   margin: 54px 0
+  align-items: center
+  justify-items: flex-start
+  max-height: 365px
+  width: 100%
   @media screen
     @media (max-width: 1240px)
+      column-gap: 50px
       margin: 40px 0
-    @media (max-width: 820px)
+    @media (max-width: 950px)
+      display: flex
+      flex-direction: column
       margin: 10px 0 30px
     @media (max-width: 650px)
       align-items: center
 .object__block
   @extend %margin
-  align-self: baseline
+  //align-self: baseline
   @extend  %fontS
   @media screen
     @media (max-width: 1024px)
@@ -79,14 +94,16 @@
   width: 270px
   height: 360px
   background-size: cover
-  border: 3px solid #9d9d9d
+  border: 1px solid #9d9d9d
   margin: auto 50px
   @media screen
     @media (max-width: 1240px)
       width: 230px
       height: 310px
       margin: auto 24px
-    @media (max-width: 820px)
+    @media (max-width: 950px)
+      display: flex
+      align-self: center
       margin: auto 22px
     @media (max-width: 650px)
       height: 400px
@@ -102,11 +119,10 @@
       font: 18px/22px
 .object__text-block
   @extend %flexCol
-  height: 360px
   margin: auto 50px
+  grid-area: 5/1/6/5
   @media screen
     @media (max-width: 1240px)
-      height: 550px
       margin: auto 24px
 .object__head
   @extend %margin
@@ -116,7 +132,6 @@
       font: 18px/22px
 .object__text
   max-width: 620px
-  height: 320px
   overflow: hidden
   @extend %margin
   @extend %fontS
@@ -130,3 +145,18 @@
   width: 20px
   top: 0
   right: 0
+.object__cost
+  //display: grid
+  grid-area: 1/1/2/2
+.object_a
+  grid-area: 1/2/2/3
+.object_b
+  grid-area: 1/3/2/4
+.object_area
+  grid-area: 1/4/2/5
+.object__address
+  grid-area: 2/1/3/2
+.object_c
+  grid-area: 3/1/4/2
+.object_d
+  grid-area: 4/1/5/2
