--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -33,6 +33,7 @@
   position: absolute;
   top: 0;
   left: 10px;
+  margin-top: 20px;
 }
 
 .header__nav_mob {
@@ -126,6 +127,21 @@
     justify-content: center;
     position: relative;
   }
+}
+
+.header__profile {
+  color: #BC7203;
+  align-self: center;
+  text-decoration: none;
+  font: 24px/36px Cormorant;
+  background: rgba(255, 244, 228, 0.9);
+  border-radius: 15px;
+  width: 120px;
+  text-align: center;
+  box-shadow: 5px 5px 5px 0 rgba(255, 255, 255, 0.6);
+}
+.header__profile:hover {
+  text-decoration: underline;
 }
 
 /*# sourceMappingURL=Header.css.map */
