--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -25,6 +25,7 @@
     position: absolute
     top: 0
     left: 10px
+    margin-top: 20px
 .header__nav_mob
     display: grid
     grid-template-rows: repeat(2, 1fr)
@@ -91,3 +92,15 @@
             align-items: center
             justify-content: center
             position: relative
+.header__profile
+    color: #BC7203
+    align-self: center
+    text-decoration: none
+    font: 24px/36px Cormorant
+    background: rgba(255, 244, 228, 0.9)
+    border-radius: 15px
+    width: 120px
+    text-align: center
+    box-shadow: 5px 5px 5px 0 rgb(255 255 255 / 60%)
+    &:hover
+        text-decoration: underline
