--- a/src/components/Profile/Profile.sass
+++ b/src/components/Profile/Profile.sass
@@ -12,9 +12,13 @@
   line-height: 29px
   font-style: italic
   font-weight: 600
-
-.profile__block .profile__user
-  margin-left: auto
+  .profile__confirm
+    margin-left: auto
+    align-items: center
+  .profile__user
+    align-self: center
+  .profile__exit
+    align-self: center
 
 .profile__user
   display: flex
@@ -67,13 +71,36 @@
 .profile__main
   display: flex
   text-decoration: none
-  align-self: center
   color: #000
+  margin-left: 60px
+
+.profile__confirm
+    font-style: italic
+    font-weight: 600
+    font-size: 24px 
+    //font-family:
+    line-height: 36px 
+    display: flex
+    cursor: pointer
+    height: 70px
+    margin-right: 20px
+    text-decoration: none
+    color: black
 
 a:hover, button:hover
   text-decoration: underline
 
 @media screen
+  @media (max-width: 1240px)
+    .profile__object
+      font-size: 24px
+      line-height: 29px
+      font-weight: 400
+    .profile__confirm
+      font-size: 18px
+      line-height: 24px
+      font-weight: 400
+
   @media (max-width: 1024px)
     .profile__block
       margin: 10px 40px
@@ -89,9 +116,6 @@ a:hover, button:hover
     .profile__object
       padding: 0 20px
       height: 60px
-      font-size: 24px
-      line-height: 29px
-      font-weight: 400
 
   @media (max-width: 850px)
 
