--- a/src/components/CardDesc/CardDesc.css
+++ b/src/components/CardDesc/CardDesc.css
@@ -1,4 +1,4 @@
-.desc__list, .desc__photo, .desc {
+.desc__list, .desc__photo, .desc__image_block, .desc {
   display: flex;
   flex-direction: column;
 }
@@ -29,6 +29,14 @@
   }
 }
 
+.desc__image_block {
+  margin-right: 40px;
+  width: 40%;
+}
+
+.desc__photo {
+  position: relative;
+}
 @media screen and (max-width: 850px) {
   .desc__photo {
     align-items: center;
@@ -38,6 +46,7 @@
 .desc__photo_m {
   width: 400px;
   height: 500px;
+  position: relative;
 }
 @media screen and (max-width: 1440px) {
   .desc__photo_m {
@@ -52,6 +61,41 @@
   }
 }
 
+.object__arrow {
+  display: flex;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  border-top: 5px solid #9d9d9d;
+  border-right: 5px solid #9d9d9d;
+  top: 50%;
+  transition: opacity 1s linear;
+  z-index: 1;
+}
+
+.object__arrow:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+.object__arrow_left {
+  transform: rotate(-135deg);
+  left: 15px;
+}
+
+.object__arrow_right {
+  transform: rotate(45deg);
+  right: 15px;
+}
+
+.popup__list {
+  position: relative;
+  display: flex;
+}
+
+.desc__photo_mini {
+  position: relative;
+}
 @media screen and (max-width: 550px) {
   .desc__photo_mini {
     display: none;
