список риелторов на подтверждение

--- a/src/components/AddCard/AddNewFlats.css
+++ b/src/components/AddCard/AddNewFlats.css
@@ -1,5 +1,12 @@
 .popup__container__type_flats {
-  width: 90%;
+  width: 70%;
+  height: 90vh;
+}
+
+@media screen and (min-width: 1440px) {
+  .popup__container__type_flats {
+    width: 960px;
+  }
 }
 
 .popup_type_flats {
@@ -15,10 +22,16 @@
 }
 
 .add-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 95%;
   margin: auto;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  overflow-y: auto;
 }
 
 .add-form__title {
@@ -27,15 +40,35 @@
 }
 
 .add-form__modul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   gap: 20px;
 }
 
+@media screen and (max-width: 850px) {
+  .add-form__modul {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 .add-form__modul_class {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .add-form__item_type_info {
@@ -43,7 +76,8 @@
   padding: 15px;
   border-radius: 15px;
   border: 0;
-  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+          box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
   height: 150px;
 }
 
@@ -58,12 +92,32 @@
 }
 
 .add-form__type_info {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .add-form__fieldset {
   border: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-margin-start: 0;
+          margin-inline-start: 0;
+  -webkit-margin-end: 0;
+          margin-inline-end: 0;
+  -webkit-padding-before: 0;
+          padding-block-start: 0;
+  -webkit-padding-start: 0;
+          padding-inline-start: 0;
+  -webkit-padding-end: 0;
+          padding-inline-end: 0;
+  -webkit-padding-after: 0;
+          padding-block-end: 0;
 }
 
 .add-form__item {
@@ -75,16 +129,28 @@
 
 .add-form__fieldset_type_column {
   border: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .add-form__type_area {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .add-form__type_addition {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   gap: 5px;
 }
@@ -100,7 +166,8 @@
   font-size: 18px;
   line-height: 22px;
   background-color: antiquewhite;
-  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.25), inset 0px 0px 10px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.25), inset 0px 0px 10px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.25), inset 0px 0px 10px rgba(0, 0, 0, 0.25);
 }
 
 .add-form__button_disabled {
@@ -109,19 +176,28 @@
 
 .card_image {
   width: 200px;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 200px;
 }
 
 .card__skeleton_cont {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
 .image__skeleton {
   width: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
+
 @media screen and (max-width: 855px) {
   .image__skeleton {
     display: none;
@@ -133,7 +209,8 @@
   height: 100px;
   background-color: antiquewhite;
   margin-bottom: 5px;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .image__item_type_one {
@@ -150,5 +227,4 @@
   width: 430px;
   height: 200px;
 }
-
 /*# sourceMappingURL=AddNewFlats.css.map */
