--- a/src/components/AddCard/AddNewFlats.sass
+++ b/src/components/AddCard/AddNewFlats.sass
@@ -1,5 +1,10 @@
 .popup__container__type_flats
-  width: 90%
+  width: 70%
+  height: 90vh
+  @media screen
+    @media (min-width: 1440px)
+      width: 960px
+    
 
 .popup_type_flats
   position: absolute
@@ -16,6 +21,7 @@
   width: 95%
   margin: auto
   flex-direction: column
+  overflow-y: auto
 
 .add-form__title
   margin: 0
@@ -25,6 +31,9 @@
   display: flex
   justify-content: space-between
   gap: 20px
+  @media screen
+    @media (max-width: 850px)
+      flex-direction: column
 
 .add-form__modul_class
   display: flex
@@ -33,11 +42,11 @@
 
 .add-form__item_type_info
   resize: vertical
-  padding:15px
-  border-radius:15px
-  border:0
-  box-shadow:4px 4px 10px rgba(0,0,0,0.4)
-  height:150px
+  padding: 15px
+  border-radius: 15px
+  border: 0
+  box-shadow: 4px 4px 10px rgba(0,0,0,0.4)
+  height: 150px
 
 .add-form__label
   padding: 10px 10px 15px 0
@@ -54,6 +63,13 @@
 
 .add-form__fieldset
   border: 0
+  display: flex
+  margin-inline-start: 0
+  margin-inline-end: 0
+  padding-block-start: 0
+  padding-inline-start: 0
+  padding-inline-end: 0
+  padding-block-end: 0
 
 .add-form__item
   width: 100%
