--- a/src/components/CardDesc/CardDesc.css
+++ b/src/components/CardDesc/CardDesc.css
@@ -1,11 +1,21 @@
-.desc__list, .desc__photo, .desc {
+.desc, .desc__photo, .desc__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
-.desc__photo_mini, .desc__block {
+.desc__block, .desc__photo_mini {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 .desc {
@@ -13,16 +23,19 @@
   width: 100%;
   margin: auto;
 }
+
 @media screen and (min-width: 1441px) {
   .desc {
     max-width: 1340px;
   }
 }
+
 @media screen and (max-width: 850px) {
   .desc {
     max-width: 89%;
   }
 }
+
 @media screen and (max-width: 550px) {
   .desc {
     max-width: 87%;
@@ -31,7 +44,9 @@
 
 @media screen and (max-width: 850px) {
   .desc__photo {
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
@@ -39,12 +54,14 @@
   width: 400px;
   height: 500px;
 }
+
 @media screen and (max-width: 1440px) {
   .desc__photo_m {
     width: 330px;
     height: 425px;
   }
 }
+
 @media screen and (max-width: 550px) {
   .desc__photo_m {
     width: 260px;
@@ -64,6 +81,7 @@
   margin-right: 30px;
   margin-top: 30px;
 }
+
 @media screen and (max-width: 1440px) {
   .desc__photo_s {
     height: 165px;
@@ -72,6 +90,7 @@
     margin-top: 30px;
   }
 }
+
 @media screen and (max-width: 850px) {
   .desc__photo_s {
     margin-right: 50px;
@@ -82,6 +101,7 @@
 .desc__photo_s:last-of-type {
   margin-right: 15px;
 }
+
 @media (max-width: 850px) {
   .desc__photo_s:last-of-type {
     margin-right: 0;
@@ -91,6 +111,7 @@
 .desc__list {
   margin-left: 20px;
 }
+
 @media (max-width: 850px) {
   .desc__list {
     margin-left: 0;
@@ -98,6 +119,8 @@
 }
 
 .desc__text {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 100%;
   font-size: 24px;
@@ -107,17 +130,20 @@
   margin-top: 20px;
   margin-bottom: 30px;
 }
+
 @media screen and (max-width: 1440px) {
   .desc__text {
     font-weight: 400;
     margin-top: 15px;
   }
 }
+
 @media screen and (max-width: 850px) {
   .desc__text {
     margin: auto;
   }
 }
+
 @media (max-width: 550px) {
   .desc__text {
     font-size: 18px;
@@ -126,5 +152,4 @@
     margin-bottom: 15px;
   }
 }
-
 /*# sourceMappingURL=CardDesc.css.map */
