--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,7 +1,12 @@
 .page {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  font-family: "Cormorant";
-  flex-direction: column;
+  font-family: 'Cormorant';
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   margin: auto;
   background-color: #FFF4E4;
   min-width: 303px;
@@ -11,6 +16,8 @@
 
 .popup {
   visibility: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   position: fixed;
   background-color: rgba(0, 0, 0, 0.5);
@@ -18,24 +25,35 @@
   right: 0;
   bottom: 0;
   left: 0;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   opacity: 0;
+  -webkit-transition: visibility 0.5s, opacity 0.5s;
   transition: visibility 0.5s, opacity 0.5s;
 }
 
 .popup_opened {
   visibility: visible;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   opacity: 1;
 }
 
 .popup__container {
-  width: 430px;
   background-color: #ffffff;
   border-radius: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   z-index: 1;
   position: relative;
 }
@@ -46,12 +64,10 @@
   background-size: contain;
   border: 0;
   background-color: rgba(1, 1, 1, 0);
-  width: 30px;
-  height: 30px;
   position: absolute;
-  top: -40px;
-  right: -30px;
+  -webkit-transition: opacity 0.3s;
   transition: opacity 0.3s;
+  padding: 0;
 }
 
 .body::-webkit-scrollbar {
@@ -63,13 +79,15 @@
 }
 
 .body::-webkit-scrollbar-track {
-  box-shadow: 5px 5px 5px -5px rgba(34, 60, 80, 0.2) inset;
+  -webkit-box-shadow: 5px 5px 5px -5px rgba(34, 60, 80, 0.2) inset;
+          box-shadow: 5px 5px 5px -5px rgba(34, 60, 80, 0.2) inset;
   background-color: #fff;
   border-radius: 10px;
 }
 
 .body::-webkit-scrollbar-thumb {
   border-radius: 10px;
+  background: -webkit-gradient(linear, left top, left bottom, from(#FFE5B4), to(#82CAFF));
   background: linear-gradient(180deg, #FFE5B4, #82CAFF);
 }
 
@@ -80,6 +98,7 @@
 }
 
 .element__link {
+  -webkit-transition: opacity 0.3s;
   transition: opacity 0.3s;
 }
 
@@ -87,5 +106,4 @@
   cursor: pointer;
   opacity: 0.3;
 }
-
 /*# sourceMappingURL=App.css.map */
