--- a/src/components/App/App.sass
+++ b/src/components/App/App.sass
@@ -27,7 +27,7 @@
   opacity: 1
 
 .popup__container
-  width: 430px
+  //width: 430px
   background-color: #ffffff
   border-radius: 10px
   display: flex
@@ -41,12 +41,13 @@
   background-size: contain
   border: 0
   background-color: rgba(1, 1, 1, 0)
-  width: 30px
-  height: 30px
+  //width: 30px
+  //height: 30px
   position: absolute
-  top: -40px
-  right: -30px
+  //top: -40px
+  //right: -30px
   transition: opacity 0.3s
+  padding: 0
 .body::-webkit-scrollbar 
   width: 10px
 .body 
