--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,43 +1,65 @@
 .footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  background-color: #000;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background-color: #990012;
   color: #ECE2CF;
   /*max-width: 1440px*/
   width: 100%;
-  flex-shrink: 0;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
   margin: 0 auto;
 }
 
 .footer div {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   max-width: 1150px;
   margin: auto;
   width: 100%;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
+
 @media screen and (max-width: 580px) {
   .footer div {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 
 .footer__logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   font-style: italic;
   font-weight: 400;
   font-size: 72px;
   line-height: 87px;
-  margin-block-start: 0;
-  margin-block-end: 0;
+  -webkit-margin-before: 0;
+          margin-block-start: 0;
+  -webkit-margin-after: 0;
+          margin-block-end: 0;
   margin-top: 45px;
 }
+
 @media screen and (max-width: 1024px) {
   .footer__logo {
     font: 64px/78px;
   }
 }
+
 @media screen and (max-width: 580px) {
   .footer__logo {
     font: 36px/44px;
@@ -46,19 +68,27 @@
 }
 
 .footer__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
+
 @media screen and (max-width: 1024px) {
   .footer__block {
     margin-left: 75px;
   }
 }
+
 @media screen and (max-width: 820px) {
   .footer__block {
     margin-left: 43px;
   }
 }
+
 @media screen and (max-width: 580px) {
   .footer__block {
     margin: auto;
@@ -70,11 +100,16 @@
   font-weight: normal;
   font-size: 24px;
   line-height: 29px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  margin-block-start: 0;
-  margin-block-end: 0;
+  -webkit-margin-before: 0;
+          margin-block-start: 0;
+  -webkit-margin-after: 0;
+          margin-block-end: 0;
   margin: 25px 0 15px;
 }
+
 @media screen and (max-width: 580px) {
   .footer__author {
     display: none;
@@ -83,12 +118,20 @@
 
 .contacts {
   font-family: Cormorant;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   list-style-type: none;
-  margin-block-start: 0;
-  margin-block-end: 0;
-  padding-inline-start: 0;
+  -webkit-margin-before: 0;
+          margin-block-start: 0;
+  -webkit-margin-after: 0;
+          margin-block-end: 0;
+  -webkit-padding-start: 0;
+          padding-inline-start: 0;
   font-style: normal;
   font-weight: 400;
   font-size: 36px;
@@ -96,6 +139,7 @@
   margin-top: 15px;
   white-space: nowrap;
 }
+
 @media screen and (max-width: 1024px) {
   .contacts {
     font-size: 24px;
@@ -103,22 +147,27 @@
     margin: 15px 180px 0 0;
   }
 }
+
 @media screen and (max-width: 820px) {
   .contacts {
     margin: 15px 100px 0 0;
   }
 }
+
 @media screen and (max-width: 580px) {
   .contacts {
     margin: auto;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
 .contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   font-family: Cormorant;
   margin: 0;
 }
-
 /*# sourceMappingURL=Footer.css.map */
