--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,20 +1,31 @@
 .form__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   width: 410px;
   margin: 40px auto 70px;
   color: #990012;
 }
 
 .form__title {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-weight: 400;
   font-size: 36px;
   line-height: 44px;
   margin-bottom: 5px;
-  margin-block-start: 0;
-  margin-block-end: 0;
+  -webkit-margin-before: 0;
+          margin-block-start: 0;
+  -webkit-margin-after: 0;
+          margin-block-end: 0;
 }
 
 .form__info {
@@ -26,15 +37,26 @@
   border: 0;
   padding: 0;
   margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  margin-inline-start: 0;
-  margin-inline-end: 0;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-margin-start: 0;
+          margin-inline-start: 0;
+  -webkit-margin-end: 0;
+          margin-inline-end: 0;
   margin-bottom: 30px;
-  padding-block-start: 0;
-  padding-inline-start: 0;
-  padding-inline-end: 0;
-  padding-block-end: 0;
+  -webkit-padding-before: 0;
+          padding-block-start: 0;
+  -webkit-padding-start: 0;
+          padding-inline-start: 0;
+  -webkit-padding-end: 0;
+          padding-inline-end: 0;
+  -webkit-padding-after: 0;
+          padding-block-end: 0;
 }
 
 .form__item {
@@ -57,10 +79,16 @@
 }
 
 .form__button {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 345px;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   height: 45px;
   margin: 0 auto;
   background: #990012;
@@ -88,20 +116,18 @@
     margin: 40px auto 232px;
   }
 }
+
 @media screen and (max-width: 550px) {
   .form__container {
     width: 260px;
     margin: auto;
     margin: 50px auto 30px;
   }
-
   .form__title {
     text-align: center;
   }
-
   .form__button {
     width: 260px;
   }
 }
-
 /*# sourceMappingURL=Form.css.map */
