--- a/src/components/ModalInfo/ModalInfo.css
+++ b/src/components/ModalInfo/ModalInfo.css
@@ -20,13 +20,21 @@
 }
 
 .popup__title {
-  margin: 0;
-  padding: 36px 34px 36px 44px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
   color: #000;
   text-align: center;
+  -webkit-margin-before: 0;
+          margin-block-start: 0;
+  -webkit-margin-after: 0;
+          margin-block-end: 0;
+  margin: 36px 34px;
+  -ms-flex-item-align: center;
+      align-self: center;
 }
 
 @media screen and (max-width: 768px) {
@@ -37,16 +45,13 @@
     padding-bottom: 75px;
     padding-left: 22px;
   }
-
   .popup__close {
     width: 20px;
     top: -30px;
     right: 0;
   }
-
   .popup__container {
     width: 282px;
   }
 }
-
 /*# sourceMappingURL=ModalInfo.css.map */
