--- a/src/components/ModalInfo/ModalInfo.sass
+++ b/src/components/ModalInfo/ModalInfo.sass
@@ -4,10 +4,9 @@
 .popup__close 
   top: -40px
   right: -30px
-
-.popup__close:hover
-  opacity: 0.6
-  cursor: pointer
+  &:hover
+    opacity: 0.6
+    cursor: pointer
 
 .popup__icon
   width: 120px
@@ -15,13 +14,16 @@
   margin: auto
   margin-top: 60px
 .popup__title
-  margin: 0
-  padding: 36px 34px 36px 44px
+  display: flex
   font-weight: 900
   font-size: 24px
   line-height: 29px
   color: #000
   text-align: center
+  margin-block-start: 0
+  margin-block-end: 0
+  margin: 36px 34px
+  align-self: center
 
 @media screen
   @media (max-width: 768px)
