--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -11,8 +11,13 @@
 }
 
 .property {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   max-width: 1440px;
   width: 91%;
   margin: 35px auto 0;
@@ -23,12 +28,17 @@
 }
 
 .property__grid {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(3, minmax(250px, 1fr));
-  column-gap: 50px;
+  -ms-grid-columns: (minmax(250px, 1fr))[3];
+      grid-template-columns: repeat(3, minmax(250px, 1fr));
+  -webkit-column-gap: 50px;
+          column-gap: 50px;
   row-gap: 40px;
   margin-top: 25px;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .property_estate {
@@ -38,26 +48,37 @@
   font-style: italic;
   font-weight: 700;
   margin: auto;
-  margin-block-start: 0;
-  margin-block-end: 0;
+  -webkit-margin-before: 0;
+          margin-block-start: 0;
+  -webkit-margin-after: 0;
+          margin-block-end: 0;
   color: #FFAB2D;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
 .property__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   border-radius: 30px;
   background: rgba(255, 244, 228, 0.9);
-  box-shadow: 15px 15px 15px 0 rgba(255, 255, 255, 0.6);
+  -webkit-box-shadow: 15px 15px 15px 0 rgba(255, 255, 255, 0.6);
+          box-shadow: 15px 15px 15px 0 rgba(255, 255, 255, 0.6);
   color: #BC7203;
   font-style: normal;
   font-weight: normal;
   font-size: 64px;
   line-height: 78px;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   text-decoration: none;
   min-height: 120px;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   max-width: 400px;
   width: 100%;
 }
@@ -68,21 +89,18 @@
     max-width: 1038px;
     width: 86%;
   }
-
   .property:last-of-type {
     margin: 100px auto 35px;
   }
-
   .property__grid {
-    column-gap: 40px;
+    -webkit-column-gap: 40px;
+            column-gap: 40px;
     row-gap: 70px;
   }
-
   .property_estate {
     font-size: 64px;
     line-height: 78px;
   }
-
   .property__block {
     font-size: 36px;
     line-height: 44px;
@@ -90,64 +108,66 @@
     max-width: 320px;
   }
 }
+
 @media screen and (max-width: 1024px) {
   .property {
     margin: 40px auto 0;
     max-width: 924px;
     width: 91%;
   }
-
   .property:last-of-type {
     margin: 40px auto 80px;
   }
 }
+
 @media screen and (max-width: 820px) {
   .property {
     max-width: 644px;
-    flex: 1;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
   }
-
   .property__grid {
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 75px;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    -webkit-column-gap: 75px;
+            column-gap: 75px;
     row-gap: 45px;
   }
-
   .property__block {
     min-height: 135px;
     max-width: 284px;
     background: rgba(254, 224, 180, 0.9);
-    box-shadow: 15px 15px 15px 0 rgba(207, 91, 0, 0.6);
+    -webkit-box-shadow: 15px 15px 15px 0 rgba(207, 91, 0, 0.6);
+            box-shadow: 15px 15px 15px 0 rgba(207, 91, 0, 0.6);
   }
 }
+
 @media screen and (max-width: 787px) {
   .property_estate {
     font-size: 48px;
     line-height: 58px;
   }
 }
+
 @media screen and (max-width: 550px) {
   .property {
     margin: 30px auto 0;
   }
-
   .property:last-of-type {
     margin: 30px auto 40px;
   }
-
   .property__grid {
-    grid-template-columns: 250px;
+    -ms-grid-columns: 250px;
+        grid-template-columns: 250px;
   }
-
   .property_estate {
     font-size: 36px;
     line-height: 44px;
   }
-
   .property__block {
     min-height: 75px;
     max-width: 250px;
   }
 }
-
 /*# sourceMappingURL=NavBar.css.map */
