--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,12 +1,18 @@
-.form__link, .form__text, .form__signup {
+.form__signup, .form__text, .form__link {
   margin: 0;
   padding: 0;
 }
 
 .form__signup {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .form__text {
@@ -18,6 +24,7 @@
   color: #990012;
   padding-right: 6px;
 }
+
 @media screen and (max-width: 502px) {
   .form__text {
     font-size: 12px;
@@ -33,6 +40,7 @@
   color: #3456F3;
   text-decoration: none;
 }
+
 @media screen and (max-width: 502px) {
   .form__link {
     font-size: 12px;
@@ -43,5 +51,4 @@
 .form__link:hover {
   text-decoration: underline;
 }
-
 /*# sourceMappingURL=Register.css.map */
