--- a/src/components/CardList/CardList.sass
+++ b/src/components/CardList/CardList.sass
@@ -2,11 +2,13 @@
   display: flex
   font-size: 36px
   line-height: 44px
-  margin: 10px 0
+  margin: 0 0 20px 0
   @media screen
     @media (max-width: 1440px)
       font-size: 24px
-      line-height: 29px
+      line-height: 1.2
+    @media (max-width: 850px)
+      font-size: 20px
+      margin: 0 0 10px 0
     @media (max-width: 550px)
       font-size: 18px
-      line-height: 22px
