--- a/src/components/ModalInfo/ModalInfo.sass
+++ b/src/components/ModalInfo/ModalInfo.sass
@@ -2,7 +2,7 @@
 .popup__container_card
   width: 90%
 .popup__close 
-  top: -40px
+  top: -30px
   right: -30px
 
 .popup__close:hover
@@ -16,7 +16,7 @@
   margin-top: 60px
 .popup__title
   margin: 0
-  padding: 36px 34px 36px 44px
+  padding: 10px
   font-weight: 900
   font-size: 24px
   line-height: 29px
@@ -28,9 +28,6 @@
     .popup__title
       font-size: 18px
       line-height: 22px
-      padding-top: 25px
-      padding-bottom: 75px
-      padding-left: 22px
     .popup__close
       width: 20px
       top: -30px
