--- a/src/components/CardDesc/CardDesc.css
+++ b/src/components/CardDesc/CardDesc.css
@@ -1,59 +1,106 @@
-.desc__list, .desc__photo, .desc__image_block, .desc {
+.desc, .desc__image_block, .desc__photo, .desc__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
-.desc__photo_mini, .desc__block {
+.desc__block, .desc__photo_mini {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 .desc {
   max-width: 93%;
-  width: 100%;
-  margin: auto;
+  margin: 50px auto;
 }
+
 @media screen and (min-width: 1441px) {
   .desc {
     max-width: 1340px;
   }
 }
+
 @media screen and (max-width: 850px) {
   .desc {
-    max-width: 89%;
+    max-width: 95%;
   }
 }
+
 @media screen and (max-width: 550px) {
   .desc {
-    max-width: 87%;
+    max-width: 95%;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .desc__block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
 .desc__image_block {
   margin-right: 40px;
-  width: 40%;
+  width: 350px;
+}
+
+@media screen and (max-width: 850px) {
+  .desc__image_block {
+    margin-right: 20px;
+    width: 300px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .desc__image_block {
+    margin-right: 0;
+    width: 260px;
+  }
 }
 
 .desc__photo {
   position: relative;
 }
+
 @media screen and (max-width: 850px) {
   .desc__photo {
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
 .desc__photo_m {
-  width: 400px;
-  height: 500px;
   position: relative;
 }
+
 @media screen and (max-width: 1440px) {
   .desc__photo_m {
-    width: 330px;
+    width: 100%;
     height: 425px;
   }
 }
+
+@media screen and (max-width: 850px) {
+  .desc__photo_m {
+    height: 350px;
+  }
+}
+
 @media screen and (max-width: 550px) {
   .desc__photo_m {
     width: 260px;
@@ -62,6 +109,8 @@
 }
 
 .object__arrow {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   position: absolute;
   width: 20px;
@@ -69,99 +118,113 @@
   border-top: 5px solid #9d9d9d;
   border-right: 5px solid #9d9d9d;
   top: 50%;
+  -webkit-transition: opacity 1s linear;
   transition: opacity 1s linear;
   z-index: 1;
 }
 
+.object__arrow_type_mini {
+  width: 10px;
+  height: 10px;
+  border-top: 3px solid #9d9d9d;
+  border-right: 3px solid #9d9d9d;
+}
+
 .object__arrow:hover {
-  opacity: 0.8;
+  opacity: .8;
   cursor: pointer;
 }
 
 .object__arrow_left {
-  transform: rotate(-135deg);
+  -webkit-transform: rotate(-135deg);
+          transform: rotate(-135deg);
   left: 15px;
 }
 
 .object__arrow_right {
-  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
   right: 15px;
 }
 
 .popup__list {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
 .desc__photo_mini {
   position: relative;
-}
-@media screen and (max-width: 550px) {
-  .desc__photo_mini {
-    display: none;
-  }
+  margin-top: 45px;
+  max-width: 100%;
+  gap: 10px;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .desc__photo_s {
-  height: 220px;
-  width: 160px;
-  margin-right: 30px;
-  margin-top: 30px;
-}
-@media screen and (max-width: 1440px) {
-  .desc__photo_s {
-    height: 165px;
-    width: 120px;
-    margin-right: 15px;
-    margin-top: 30px;
-  }
-}
-@media screen and (max-width: 850px) {
-  .desc__photo_s {
-    margin-right: 50px;
-    margin-top: 45px;
-  }
+  width: 30%;
+  height: 130px;
 }
 
-.desc__photo_s:last-of-type {
-  margin-right: 15px;
-}
-@media (max-width: 850px) {
-  .desc__photo_s:last-of-type {
-    margin-right: 0;
+@media screen and (max-width: 850px) {
+  .desc__photo_s {
+    height: 110px;
   }
 }
 
 .desc__list {
   margin-left: 20px;
 }
+
 @media (max-width: 850px) {
   .desc__list {
     margin-left: 0;
+    margin-top: 15px;
+  }
+}
+
+@media (max-width: 550px) {
+  .desc__list {
+    width: 90%;
+  }
+}
+
+.desc__title {
+  font-size: 36px;
+  line-height: 1.4;
+  text-transform: capitalize;
+  font-weight: normal;
+  margin: 0 0 23px;
+}
+
+@media screen and (max-width: 550px) {
+  .desc__title {
+    font-size: 28px;
   }
 }
 
 .desc__text {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 100%;
   font-size: 24px;
   line-height: 29px;
   font-weight: 600;
   font-style: italic;
-  margin-top: 20px;
+  margin-top: 45px;
   margin-bottom: 30px;
 }
+
 @media screen and (max-width: 1440px) {
   .desc__text {
     font-weight: 400;
-    margin-top: 15px;
+    margin: 0 auto;
   }
 }
-@media screen and (max-width: 850px) {
-  .desc__text {
-    margin: auto;
-  }
-}
+
 @media (max-width: 550px) {
   .desc__text {
     font-size: 18px;
@@ -170,5 +233,4 @@
     margin-bottom: 15px;
   }
 }
-
 /*# sourceMappingURL=CardDesc.css.map */
