--- a/src/components/CardList/CardList.css
+++ b/src/components/CardList/CardList.css
@@ -1,20 +1,29 @@
 .card__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   font-size: 36px;
   line-height: 44px;
-  margin: 10px 0;
+  margin: 0 0 20px 0;
 }
+
 @media screen and (max-width: 1440px) {
   .card__block {
     font-size: 24px;
-    line-height: 29px;
-  }
-}
-@media screen and (max-width: 550px) {
-  .card__block {
-    font-size: 18px;
-    line-height: 22px;
+    line-height: 1.2;
   }
 }
 
+@media screen and (max-width: 850px) {
+  .card__block {
+    font-size: 20px;
+    margin: 0 0 10px 0;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .card__block {
+    font-size: 18px;
+  }
+}
 /*# sourceMappingURL=CardList.css.map */
