--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -1,14 +1,24 @@
-.object_mob, .object__name, .object {
+.object, .object__name, .object_mob {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 .object__text-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
-.object__text, .object__head, .object__block, .object__name {
+.object__name, .object__block, .object__head, .object__text {
   font: 24px/29px;
   font-style: normal;
   font-weight: normal;
@@ -20,40 +30,57 @@
   font-weight: normal;
 }
 
-.object__text, .object__head, .object__price, .object__block {
+.object__block, .object__price, .object__head, .object__text {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  margin-block-start: 0;
-  margin-block-end: 0;
+  -webkit-margin-before: 0;
+          margin-block-start: 0;
+  -webkit-margin-after: 0;
+          margin-block-end: 0;
 }
 
 .object {
-  max-width: 91, 7%;
+  max-width: 91,7%;
   height: 475px;
   margin: 50px 60px;
-  box-shadow: 0px 10px 20px 5px rgba(191, 191, 191, 0.8);
+  -webkit-box-shadow: 0px 10px 20px 5px rgba(191, 191, 191, 0.8);
+          box-shadow: 0px 10px 20px 5px rgba(191, 191, 191, 0.8);
   background: #FEE0D4;
   position: relative;
 }
+
 @media screen and (max-width: 1240px) {
   .object {
     /*max-width: 1134px*/
     margin: 50px 55px;
   }
 }
+
 @media screen and (max-width: 950px) {
   .object {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     height: 100%;
     /*max-width: 687px*/
     margin: 50px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-self: center;
+    -ms-flex-item-align: center;
+        align-self: center;
     width: 80vw;
   }
 }
+
 @media screen and (max-width: 650px) {
   .object {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     max-width: 260px;
     margin: 30px;
   }
@@ -62,6 +89,7 @@
 .object__name {
   max-width: 250px;
 }
+
 @media screen and (max-width: 1024px) {
   .object__name {
     font: 18px/22px;
@@ -71,46 +99,70 @@
 .object_mob {
   position: relative;
 }
+
 @media screen and (max-width: 850px) {
   .object_mob {
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 20px auto 0;
   }
 }
+
 @media screen and (max-width: 650px) {
   .object_mob {
     max-width: 260px;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
 .object__about {
+  display: -ms-grid;
   display: grid;
-  column-gap: 100px;
+  -webkit-column-gap: 100px;
+          column-gap: 100px;
   row-gap: 10px;
   margin: 54px 0;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   justify-items: flex-start;
   max-height: 365px;
   width: 100%;
 }
+
 @media screen and (max-width: 1240px) {
   .object__about {
-    column-gap: 50px;
+    -webkit-column-gap: 50px;
+            column-gap: 50px;
     margin: 40px 0;
   }
 }
+
 @media screen and (max-width: 950px) {
   .object__about {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     margin: 10px 0 30px;
   }
 }
+
 @media screen and (max-width: 650px) {
   .object__about {
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
@@ -127,6 +179,7 @@
   border: 1px solid #9d9d9d;
   margin: auto 50px;
 }
+
 @media screen and (max-width: 1240px) {
   .object__photo {
     width: 230px;
@@ -134,18 +187,24 @@
     margin: auto 24px;
   }
 }
+
 @media screen and (max-width: 950px) {
   .object__photo {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-self: center;
+    -ms-flex-item-align: center;
+        align-self: center;
     margin: auto 22px;
   }
 }
+
 @media screen and (max-width: 650px) {
   .object__photo {
     height: 400px;
   }
 }
+
 @media screen and (max-width: 550px) {
   .object__photo {
     width: 200px;
@@ -162,8 +221,13 @@
 
 .object__text-block {
   margin: auto 50px;
+  -ms-grid-row: 5;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 4;
   grid-area: 5/1/6/5;
 }
+
 @media screen and (max-width: 1240px) {
   .object__text-block {
     margin: auto 24px;
@@ -180,11 +244,13 @@
   max-width: 620px;
   overflow: hidden;
 }
+
 @media screen and (max-width: 1240px) {
   .object__text {
     height: 100%;
   }
 }
+
 @media screen and (max-width: 820px) {
   .object__text {
     font: 18px/22px;
@@ -199,31 +265,58 @@
 }
 
 .object__cost {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
   grid-area: 1/1/2/2;
 }
 
 .object_a {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
   grid-area: 1/2/2/3;
 }
 
 .object_b {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
   grid-area: 1/3/2/4;
 }
 
 .object_area {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 4;
+  -ms-grid-column-span: 1;
   grid-area: 1/4/2/5;
 }
 
 .object__address {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
   grid-area: 2/1/3/2;
 }
 
 .object_c {
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
   grid-area: 3/1/4/2;
 }
 
 .object_d {
+  -ms-grid-row: 4;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
   grid-area: 4/1/5/2;
 }
-
 /*# sourceMappingURL=Cards.css.map */
