--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,13 +1,18 @@
 .header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin: 0 auto;
   width: 95%;
   height: 120px;
   z-index: 1;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   position: relative;
   max-width: 1440px;
 }
+
 @media screen and (max-width: 820px) {
   .header {
     overflow: hidden;
@@ -17,11 +22,23 @@
   }
 }
 
+@media screen and (max-width: 550px) {
+  .header {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 .header__img {
   position: relative;
 }
+
 @media screen and (max-width: 820px) {
   .header__img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     z-index: 1;
     width: 100%;
@@ -36,20 +53,40 @@
   margin-top: 20px;
 }
 
+@media screen and (max-width: 550px) {
+  .header__logo {
+    width: 100px;
+    top: 15px;
+  }
+}
+
 .header__nav_mob {
+  display: -ms-grid;
   display: grid;
-  grid-template-rows: repeat(2, 1fr);
-  grid-template-columns: repeat(5, 1fr);
+  -ms-grid-rows: (1fr)[2];
+      grid-template-rows: repeat(2, 1fr);
+  -ms-grid-columns: (1fr)[5];
+      grid-template-columns: repeat(5, 1fr);
   min-height: 200px;
-  justify-content: space-around;
-  align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
 }
+
 @media screen and (max-width: 820px) {
   .header__nav_mob {
-    align-self: flex-end;
+    -ms-flex-item-align: end;
+        align-self: flex-end;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     height: 40px;
     width: 55px;
     margin-right: 20px;
@@ -67,12 +104,14 @@
   line-height: 48px;
   text-align: center;
 }
+
 @media screen and (max-width: 1240px) {
   .header__nav_block {
     font-size: 24px;
     line-height: 36px;
   }
 }
+
 @media screen and (max-width: 820px) {
   .header__nav_block {
     display: none;
@@ -81,9 +120,12 @@
 
 .header__logo_search {
   min-height: 230px;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 0 0 0 50px;
 }
+
 @media screen and (max-width: 1240px) {
   .header__logo_search {
     font-size: 72px;
@@ -101,47 +143,60 @@
   background-size: contain;
   background-color: #E3E4FA;
 }
+
 @media screen and (max-width: 820px) {
   .header_search {
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     background-position: center;
   }
 }
 
 .header__nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   background-color: #4B0082;
   /*max-width: 1340px*/
 }
 
 .header__top {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
+
 @media screen and (max-width: 820px) {
   .header__top {
     border-bottom: none;
     max-height: 500px;
     height: 100%;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     position: relative;
   }
 }
 
 .header__profile {
   color: #BC7203;
-  align-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   text-decoration: none;
   font: 24px/36px Cormorant;
   background: rgba(255, 244, 228, 0.9);
   border-radius: 15px;
   width: 120px;
   text-align: center;
-  box-shadow: 5px 5px 5px 0 rgba(255, 255, 255, 0.6);
 }
+
 .header__profile:hover {
   text-decoration: underline;
 }
-
 /*# sourceMappingURL=Header.css.map */
