--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -13,6 +13,8 @@
             background-size: cover
             height: 110px
             background: none
+        @media (max-width: 550px)
+            flex-direction: column
 .header__img
     position: relative
     @media screen
@@ -21,11 +23,15 @@
             z-index: 1
             width: 100%
 .header__logo
-    width: 250px
-    position: absolute
-    top: 0
-    left: 10px
-    margin-top: 20px
+  width: 250px
+  position: absolute
+  top: 0
+  left: 10px
+  margin-top: 20px
+  @media screen
+    @media (max-width: 550px)
+      width: 100px
+      top: 15px
 .header__nav_mob
     display: grid
     grid-template-rows: repeat(2, 1fr)
@@ -101,6 +107,5 @@
     border-radius: 15px
     width: 120px
     text-align: center
-    box-shadow: 5px 5px 5px 0 rgb(255 255 255 / 60%)
     &:hover
         text-decoration: underline
