откат версии реакт роутер дом

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -66,6 +66,8 @@
   background-size: contain;
   border: 0;
   background-color: rgba(1, 1, 1, 0);
+  width: 30px;
+  height: 30px;
   position: absolute;
   -webkit-transition: opacity 0.3s;
   transition: opacity 0.3s;
