--- a/src/components/Confirm/Confirm.css
+++ b/src/components/Confirm/Confirm.css
@@ -57,6 +57,10 @@
   }
 }
 
+.confirm__item_active {
+  background-color: rgba(7, 133, 61, 0.8);
+}
+
 .confirm__button {
   display: -webkit-box;
   display: -ms-flexbox;
