--- a/src/components/ModalInfo/ModalInfo.sass
+++ b/src/components/ModalInfo/ModalInfo.sass
@@ -1,9 +1,8 @@
-
 .popup__container_card
   width: 90%
 .popup__close 
-  top: -30px
-  right: -30px
+  top: 0
+  right: 0
   &:hover
     opacity: 0.6
     cursor: pointer
