--- a/src/components/CardDesc/CardDesc.css
+++ b/src/components/CardDesc/CardDesc.css
@@ -1,4 +1,4 @@
-.desc__list, .desc__photo, .desc__image_block, .desc {
+.desc, .desc__image_block, .desc__photo, .desc__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -84,6 +84,11 @@
   }
 }
 
+.popup__image {
+  height: 80vh;
+  margin: auto;
+}
+
 .desc__photo_m {
   position: relative;
 }
@@ -92,6 +97,12 @@
   .desc__photo_m {
     width: 100%;
     height: 425px;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .desc__photo_m {
+    height: 350px;
   }
 }
 
@@ -158,35 +169,13 @@
 }
 
 .desc__photo_s {
-  height: 220px;
-  width: 160px;
-  margin-right: 30px;
-  margin-top: 30px;
-}
-
-@media screen and (max-width: 1440px) {
-  .desc__photo_s {
-    height: 165px;
-    width: 120px;
-    margin-right: 15px;
-    margin-top: 30px;
-  }
+  width: 30%;
+  height: 130px;
 }
 
 @media screen and (max-width: 850px) {
   .desc__photo_s {
-    margin-right: 50px;
-    margin-top: 45px;
-  }
-}
-
-.desc__photo_s:last-of-type {
-  margin-right: 15px;
-}
-
-@media (max-width: 850px) {
-  .desc__photo_s:last-of-type {
-    margin-right: 0;
+    height: 110px;
   }
 }
 
@@ -237,13 +226,7 @@
 @media screen and (max-width: 1440px) {
   .desc__text {
     font-weight: 400;
-    margin-top: 15px;
-  }
-}
-
-@media screen and (max-width: 850px) {
-  .desc__text {
-    margin: auto;
+    margin: 0 auto;
   }
 }
 
