--- a/src/components/CardDesc/CardDesc.sass
+++ b/src/components/CardDesc/CardDesc.sass
@@ -38,6 +38,9 @@
   @media screen
     @media (max-width: 850px)
       align-items: center
+.popup__image
+  height: 80vh
+  margin: auto
 .desc__photo_m
   position: relative
   @media screen
