--- a/src/components/Confirm/Confirm.sass
+++ b/src/components/Confirm/Confirm.sass
@@ -23,7 +23,8 @@
       font: 14px/19px Cormorant
     @media (max-width: 850px)
       min-height: 30px
-
+.confirm__item_active
+  background-color: rgba(7, 133, 61, 0.8)
 .confirm__button
   display: flex
   align-items: center
