стилизация списка пользователей для подтверждения, стилизация попапа выбора объекта, добавила кнопки редактирования и скрытия объекта

--- a/src/components/App/App.sass
+++ b/src/components/App/App.sass
@@ -32,18 +32,25 @@
   flex-direction: column
   z-index: 1
   position: relative
-  overflow: auto
+  //overflow: auto
 .popup__close
   background-image: url(../../images/close-icon.svg)
   background-repeat: no-repeat
   background-size: contain
   border: 0
-  background-color: rgba(1, 1, 1, 0)
+  background-color: transparent
   width: 30px
   height: 30px
   position: absolute
   transition: opacity 0.3s
   padding: 0
+
+.card__close
+  top: 5px
+  right: 5px
+  background-image: url(../../images/musorka.svg)
+  width: 25px
+  height: 25px
   
 .body::-webkit-scrollbar 
   width: 10px
