--- a/src/components/Cards/Cards.sass
+++ b/src/components/Cards/Cards.sass
@@ -156,3 +156,39 @@
   grid-area: 3/1/4/2
 .object_d
   grid-area: 4/1/5/2
+.popup__edit
+  background-image: url(../../images/karandash.svg)
+  width: 25px
+  height: 25px
+  background-repeat: no-repeat
+  background-size: contain
+  border: 0
+  background-color: transparent
+  position: absolute
+  transition: opacity 0.3s
+  padding: 0
+  right: 40px
+  top: 5px
+  cursor: pointer
+  transition: opacity 0.3s
+  &:hover
+    opacity: 0.6
+
+.popup__hide
+  background-image: url(../../images/minusik.svg)
+  width: 25px
+  height: 25px
+  background-repeat: no-repeat
+  background-size: contain
+  border: 0
+  background-color: transparent
+  position: absolute
+  transition: opacity 0.3s
+  padding: 0
+  right: 75px
+  top: 5px
+  cursor: pointer
+  transition: opacity 0.3s
+  background-position-y: center
+  &:hover
+    opacity: 0.6
