--- a/src/components/Profile/Profile.sass
+++ b/src/components/Profile/Profile.sass
@@ -58,7 +58,7 @@
   font-family: Cormorant
   display: flex
   margin-left: auto
-  box-shadow: 5px 5px 10px rgb(0 0 0 / 30%)
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3)
   height: 70px
   font-size: 36px
   line-height: 43px
@@ -67,6 +67,7 @@
   border-radius: 20px
   border: 2px solid black
   background-color: transparent
+  cursor: pointer
 
 .profile__main
   display: flex
