--- a/src/components/AddCard/AddNewFlats.css
+++ b/src/components/AddCard/AddNewFlats.css
@@ -1,6 +1,6 @@
 .popup__container__type_flats {
   width: 70%;
-  height: 90vh;
+  max-height: 90vh;
 }
 
 @media screen and (min-width: 1440px) {
@@ -26,7 +26,7 @@
   display: -ms-flexbox;
   display: flex;
   width: 95%;
-  margin: auto;
+  margin: auto auto 0;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -38,6 +38,12 @@
   margin: 0;
   padding: 0;
   font-size: 22px;
+  -webkit-margin-before: 0;
+          margin-block-start: 0;
+  -webkit-margin-after: 0;
+          margin-block-end: 0;
+  font-weight: normal;
+  font-style: italic;
 }
 
 .add-form__modul {
@@ -47,7 +53,6 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  gap: 20px;
 }
 
 @media screen and (max-width: 850px) {
@@ -70,6 +75,10 @@
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: start;
+}
+
+.add-form__modul_class:first-of-type {
+  margin-right: 40px;
 }
 
 .add-form__item_type_info {
@@ -118,6 +127,18 @@
           padding-inline-end: 0;
   -webkit-padding-after: 0;
           padding-block-end: 0;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  font-weight: normal;
+}
+
+@media screen and (max-width: 550px) {
+  .add-form__fieldset {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 .add-form__item {
@@ -161,14 +182,21 @@
   width: 227px;
   height: 54px;
   border: 0;
-  border-radius: 2px;
+  border-radius: 5px;
   font-family: inherit;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
   background-color: antiquewhite;
-  -webkit-box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.25), inset 0px 0px 10px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.25), inset 0px 0px 10px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.35);
+          box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.35);
+  font-style: italic;
+  cursor: pointer;
+}
+
+.add-form__button:focus {
+  -webkit-box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.35);
+          box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.35);
 }
 
 .add-form__button_disabled {
@@ -225,7 +253,20 @@
 }
 
 .popup__container_type_object {
-  width: 430px;
-  height: 200px;
+  width: 400px;
+  height: 160px;
+}
+
+@media screen and (max-width: 550px) {
+  .popup__container_type_object {
+    width: 250px;
+  }
+}
+
+.add-form__type_rooms {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 /*# sourceMappingURL=AddNewFlats.css.map */
