--- a/src/components/AddCard/AddNewFlats.sass
+++ b/src/components/AddCard/AddNewFlats.sass
@@ -1,6 +1,6 @@
 .popup__container__type_flats
   width: 70%
-  height: 90vh
+  max-height: 90vh
   @media screen
     @media (min-width: 1440px)
       width: 960px
@@ -19,7 +19,7 @@
 .add-form
   display: flex
   width: 95%
-  margin: auto
+  margin: auto auto 0
   flex-direction: column
   overflow-y: auto
 
@@ -27,10 +27,14 @@
   margin: 0
   padding: 0
   font-size: 22px
+  margin-block-start: 0
+  margin-block-end: 0
+  font-weight: normal
+  font-style: italic
 .add-form__modul
   display: flex
   justify-content: space-between
-  gap: 20px
+
   @media screen
     @media (max-width: 850px)
       flex-direction: column
@@ -39,6 +43,8 @@
   display: flex
   flex-direction: column
   justify-content: start
+  &:first-of-type
+    margin-right: 40px 
 
 .add-form__item_type_info
   resize: vertical
@@ -69,6 +75,11 @@
   padding-inline-start: 0
   padding-inline-end: 0
   padding-block-end: 0
+  justify-content: space-around
+  font-weight: normal
+  @media screen
+    @media (max-width: 550px)
+      flex-direction: column
 
 .add-form__item
   width: 100%
@@ -94,13 +105,18 @@
   width: 227px
   height: 54px
   border: 0
-  border-radius: 2px
+  border-radius: 5px
   font-family: inherit
   font-weight: 400
   font-size: 18px
   line-height: 22px
   background-color: antiquewhite
-  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.25), inset 0px 0px 10px rgba(0, 0, 0, 0.25)
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.35)
+  font-style: italic
+  cursor: pointer
+  &:focus
+    box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.35)
+    
 
 .add-form__button_disabled
   background: #c6c7cc
@@ -136,5 +152,13 @@
   background-color: antiquewhite
 
 .popup__container_type_object
-  width: 430px
-  height: 200px
+  width: 400px
+  height: 160px
+  @media screen
+    @media (max-width: 550px)
+      width: 250px
+
+
+
+.add-form__type_rooms
+  flex-direction: column
