--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -57,7 +57,6 @@
           flex-direction: column;
   z-index: 1;
   position: relative;
-  overflow: auto;
 }
 
 .popup__close {
@@ -65,13 +64,21 @@
   background-repeat: no-repeat;
   background-size: contain;
   border: 0;
-  background-color: rgba(1, 1, 1, 0);
+  background-color: transparent;
   width: 30px;
   height: 30px;
   position: absolute;
   -webkit-transition: opacity 0.3s;
   transition: opacity 0.3s;
   padding: 0;
+}
+
+.card__close {
+  top: 5px;
+  right: 5px;
+  background-image: url(../../images/musorka.svg);
+  width: 25px;
+  height: 25px;
 }
 
 .body::-webkit-scrollbar {
