--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -313,4 +313,49 @@
   -ms-grid-column-span: 1;
   grid-area: 4/1/5/2;
 }
+
+.popup__edit {
+  background-image: url(../../images/karandash.svg);
+  width: 25px;
+  height: 25px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  border: 0;
+  background-color: transparent;
+  position: absolute;
+  -webkit-transition: opacity 0.3s;
+  transition: opacity 0.3s;
+  padding: 0;
+  right: 40px;
+  top: 5px;
+  cursor: pointer;
+  transition: opacity 0.3s;
+}
+
+.popup__edit:hover {
+  opacity: 0.6;
+}
+
+.popup__hide {
+  background-image: url(../../images/minusik.svg);
+  width: 25px;
+  height: 25px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  border: 0;
+  background-color: transparent;
+  position: absolute;
+  -webkit-transition: opacity 0.3s;
+  transition: opacity 0.3s;
+  padding: 0;
+  right: 75px;
+  top: 5px;
+  cursor: pointer;
+  transition: opacity 0.3s;
+  background-position-y: center;
+}
+
+.popup__hide:hover {
+  opacity: 0.6;
+}
 /*# sourceMappingURL=Cards.css.map */
