--- a/src/components/Confirm/Confirm.css
+++ b/src/components/Confirm/Confirm.css
@@ -6,6 +6,10 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: -webkit-fill-available;
 }
 
 @media screen and (max-width: 850px) {
@@ -15,6 +19,9 @@
         -ms-flex-direction: column;
             flex-direction: column;
     width: 100%;
+    border: 3px solid rgba(251, 207, 207, 0.8);
+    margin-bottom: 20px;
+    border-radius: 5px;
   }
   .confirm__card div {
     width: 100%;
@@ -36,13 +43,15 @@
   display: -ms-flexbox;
   display: flex;
   font: 18px/24px Cormorant;
-  background-color: rgba(251, 207, 207, 0.8);
+  background-color: rgba(255, 232, 124, 0.8);
   margin: 10px;
   border-radius: 5px;
   padding: 0 5px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  min-height: 40px;
+  width: -webkit-fill-available;
 }
 
 @media screen and (max-width: 1024px) {
@@ -58,7 +67,11 @@
 }
 
 .confirm__item_active {
-  background-color: rgba(7, 133, 61, 0.8);
+  background-color: rgba(106, 251, 146, 0.8);
+}
+
+.confirm__item_inactive {
+  background-color: rgba(182, 182, 180, 0.8);
 }
 
 .confirm__button {
@@ -91,5 +104,9 @@
 
 .confirm__no {
   background: url("../../images/krasniykrestik.svg") no-repeat center;
+}
+
+.confirm__ok-no_active {
+  display: none;
 }
 /*# sourceMappingURL=Confirm.css.map */
