--- a/src/components/Confirm/Confirm.sass
+++ b/src/components/Confirm/Confirm.sass
@@ -1,10 +1,15 @@
 .confirm__card
   display: flex
   flex-direction: row
+  justify-content: space-between
+  width: -webkit-fill-available
   @media screen
     @media (max-width: 850px)
       flex-direction: column
       width: 100%
+      border: 3px solid rgba(251, 207, 207, 0.8)
+      margin-bottom: 20px
+      border-radius: 5px
       div
         width: 100%
   div
@@ -13,18 +18,22 @@
 .confirm__item
   display: flex
   font: 18px/24px Cormorant
-  background-color: rgba(251, 207, 207, 0.8)
+  background-color: rgba(255, 232, 124, 0.8)
   margin: 10px
   border-radius: 5px
   padding: 0 5px
   align-items: center
+  min-height: 40px
+  width: -webkit-fill-available;
   @media screen
     @media (max-width: 1024px)
       font: 14px/19px Cormorant
     @media (max-width: 850px)
       min-height: 30px
 .confirm__item_active
-  background-color: rgba(7, 133, 61, 0.8)
+  background-color: rgba(106, 251, 146, 0.8)
+.confirm__item_inactive
+  background-color: rgba(182, 182, 180, 0.8)
 .confirm__button
   display: flex
   align-items: center
@@ -44,3 +53,5 @@
   background: url('../../images/zelenayagaloshka.svg') no-repeat center
 .confirm__no
   background: url('../../images/krasniykrestik.svg') no-repeat center
+.confirm__ok-no_active
+  display: none
