--- a/src/components/Confirm/ConfirmList.css
+++ b/src/components/Confirm/ConfirmList.css
@@ -10,9 +10,6 @@
           margin-block-start: 0;
   -webkit-margin-after: 0;
           margin-block-end: 0;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   max-width: 80%;
   width: 100%;
   -ms-flex-item-align: center;
@@ -28,11 +25,18 @@
 .confirm__users {
   font-size: 36px;
   font-weight: 600;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .confirm__list {
   list-style-type: none;
   -webkit-padding-start: 0;
           padding-inline-start: 0;
+  width: 80%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 /*# sourceMappingURL=ConfirmList.css.map */
