--- a/src/components/Confirm/ConfirmList.sass
+++ b/src/components/Confirm/ConfirmList.sass
@@ -3,7 +3,6 @@
   flex-direction: column
   margin-block-start: 0
   margin-block-end: 0
-  align-items: center
   max-width: 80%
   width: 100%
   align-self: center
@@ -15,7 +14,10 @@
   @extend %margin
   font-size: 36px
   font-weight: 600
+  align-items: center
 .confirm__list
   @extend %margin
   list-style-type: none
   padding-inline-start: 0
+  width: 80%
+  justify-content: space-between
