--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -6,7 +6,8 @@
     z-index: 1
     justify-content: space-between
     position: relative
-    max-width: 1440px
+    //max-width: 1440px
+    background-image: url('../../images/fon1.jpg')
     @media screen
         @media (max-width: 820px) 
             overflow: hidden
