--- a/src/components/ModalInfo/ModalInfo.css
+++ b/src/components/ModalInfo/ModalInfo.css
@@ -23,18 +23,19 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  font-weight: 900;
-  font-size: 24px;
-  line-height: 29px;
+  font-weight: normal;
+  font-size: 36px;
+  line-height: 44px;
   color: #000;
   text-align: center;
   -webkit-margin-before: 0;
           margin-block-start: 0;
   -webkit-margin-after: 0;
           margin-block-end: 0;
-  margin: 36px 34px;
+  margin: 10px auto;
   -ms-flex-item-align: center;
       align-self: center;
+  font-style: italic;
 }
 
 @media screen and (max-width: 768px) {
@@ -50,5 +51,35 @@
   .popup__container {
     width: 282px;
   }
+}
+
+.add-form__selected {
+  font-style: italic;
+  font-size: 12px;
+  line-height: 16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+@media screen and (max-width: 550px) {
+  .add-form__selected {
+    margin-top: 10px;
+    border-radius: 5px;
+  }
+}
+
+.popup__container__type_modal-info {
+  width: 280px;
+  height: 380px;
+}
+
+.popup__title_modal-info {
+  font-size: 24px;
+  line-height: 29px;
+  font-weight: 900;
+  margin: 34px 36px 60px 36px;
 }
 /*# sourceMappingURL=ModalInfo.css.map */
