--- a/src/components/ModalInfo/ModalInfo.sass
+++ b/src/components/ModalInfo/ModalInfo.sass
@@ -14,15 +14,16 @@
   margin-top: 60px
 .popup__title
   display: flex
-  font-weight: 900
-  font-size: 24px
-  line-height: 29px
+  font-weight: normal
+  font-size: 36px
+  line-height: 44px
   color: #000
   text-align: center
   margin-block-start: 0
   margin-block-end: 0
-  margin: 36px 34px
+  margin: 10px auto
   align-self: center
+  font-style: italic
 
 @media screen
   @media (max-width: 768px)
@@ -35,3 +36,25 @@
       right: 0
     .popup__container
       width: 282px
+
+.add-form__selected
+  font-style: italic
+  font-size: 12px
+  line-height: 16px
+  display: flex
+  cursor: pointer
+  border-radius: 10px
+  @media screen
+    @media (max-width: 550px)
+      margin-top: 10px
+      border-radius: 5px
+
+.popup__container__type_modal-info
+  width: 280px
+  height: 380px
+
+.popup__title_modal-info
+  font-size: 24px
+  line-height: 29px
+  font-weight: 900
+  margin: 34px 36px 60px 36px
