--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,43 +1,72 @@
 .profile {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  flex: 1;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 .profile__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   margin: 15px 50px 15px 60px;
   font-size: 24px;
   line-height: 29px;
   font-style: italic;
   font-weight: 600;
 }
+
 .profile__block .profile__confirm {
   margin-left: auto;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
+
 .profile__block .profile__user {
-  align-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
+
 .profile__block .profile__exit {
-  align-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 
 .profile__user {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin-right: 20px;
 }
 
 .profile__exit {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   text-decoration: none;
   color: #000;
 }
 
 .profile__button {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 60px;
   padding: 0 20px;
   background-color: #FEE0D4;
@@ -46,14 +75,18 @@
   line-height: 29px;
   font-style: italic;
   cursor: pointer;
-  font-family: "Cormorant";
+  font-family: 'Cormorant';
 }
 
 /*, 'Arial', 'sans-serif'*/
 .profile__name {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  margin-block-start: 0;
-  margin-block-end: 0;
+  -webkit-margin-before: 0;
+          margin-block-start: 0;
+  -webkit-margin-after: 0;
+          margin-block-end: 0;
   font-weight: 600;
   font-size: 48px;
   line-height: 58px;
@@ -61,12 +94,17 @@
 }
 
 .profile__object {
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 0 30px;
   font-family: Cormorant;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin-left: auto;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+          box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
   height: 70px;
   font-size: 36px;
   line-height: 43px;
@@ -75,9 +113,12 @@
   border-radius: 20px;
   border: 2px solid black;
   background-color: transparent;
+  cursor: pointer;
 }
 
 .profile__main {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   text-decoration: none;
   color: #000;
@@ -89,6 +130,8 @@
   font-weight: 600;
   font-size: 24px;
   line-height: 36px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   cursor: pointer;
   height: 70px;
@@ -107,13 +150,13 @@ a:hover, button:hover {
     line-height: 29px;
     font-weight: 400;
   }
-
   .profile__confirm {
     font-size: 18px;
     line-height: 24px;
     font-weight: 400;
   }
 }
+
 @media screen and (max-width: 1024px) {
   .profile__block {
     margin: 10px 40px;
@@ -121,18 +164,17 @@ a:hover, button:hover {
     line-height: 22px;
     font-weight: 400;
   }
-
   .profile__name {
     font-weight: 400;
     font-size: 36px;
     line-height: 42px;
   }
-
   .profile__object {
     padding: 0 20px;
     height: 60px;
   }
 }
+
 @media screen and (max-width: 850px) {
   .profile__button {
     height: 50px;
@@ -140,12 +182,10 @@ a:hover, button:hover {
     font-size: 18px;
     line-height: 22px;
   }
-
   .profile__name {
     font-size: 36px;
     line-height: 43px;
   }
-
   .profile__object {
     padding: 0 10px;
     height: 50px;
@@ -153,41 +193,43 @@ a:hover, button:hover {
     line-height: 29px;
   }
 }
+
 @media screen and (max-width: 850px) {
   .profile__block {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     font-size: 18px;
     line-height: 22px;
     font-weight: 400;
   }
-
   .profile__user {
     margin-right: 0;
   }
-
   .profile__exit {
-    justify-content: end;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: end;
   }
-
   .profile__button {
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     height: 50px;
     padding: 0;
     font-size: 18px;
     line-height: 22px;
   }
-
   .profile__block h1, .profile__block button {
     justify-items: start;
   }
-
   .profile__name {
     font-size: 24px;
     line-height: 29px;
     margin-right: auto;
     margin-bottom: 20px;
   }
-
   .profile__object {
     margin: 20px auto;
     font-size: 18px;
@@ -195,5 +237,4 @@ a:hover, button:hover {
     font-weight: 400;
   }
 }
-
 /*# sourceMappingURL=Profile.css.map */
